fix in gap between cuts in visualizer

--- a/src/components/shared/CutVisualizer/cutVisualizer.module.css
+++ b/src/components/shared/CutVisualizer/cutVisualizer.module.css
@@ -1,7 +1,6 @@
 .bulk {
 	background-color: #f3f3f3;
 	border: 2px solid #333;
-	position: relative;
 	box-sizing: border-box;
 }
 
